plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.6'
}

repositories {
    mavenCentral()
}

bootJar.enabled = false

allprojects {
    group = 'mcmp.mc.observability'
    version = '0.2.0'
    sourceCompatibility = '17'

    repositories {
        mavenCentral()
    }
}


subprojects {

    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
    }
}

project(':mc-o11y-manager') {
}

project(':mc-o11y-agent') {
}
